# obs-qsv-onevpl

./: .gitignore  .gitmodules  CMakeLists.txt
obs-qsvonevpl/: CMakeLists.txt  obs-qsv-onevpl-encoder-internal.cpp  obs-qsv-onevpl-encoder-internal.hpp  obs-qsv-onevpl-encoder.cpp  obs-qsv-onevpl-encoder.hpp  obs-qsv-onevpl-plugin-init.cpp  obs-qsv-onevpl-plugin-main.cpp
obs-qsvonevpl/bits/: windows_defs.h
obs-qsvonevpl/helpers/: bitstream_manager.hpp  brc_routines.cpp  brc_routines.hpp  common_directx11.cpp  common_directx11.hpp  common_utils.hpp  common_utils_linux.cpp  common_utils_windows.cpp  ext_buf_manager.hpp  qsv_params.hpp
obs-qsvonevpl/obs-qsv-test/: obs-qsv-test.cpp
obs-qsvonevpl/obs-qsvonevpl-test/: CMakeLists.txt  obs-qsv-test.cpp
oneVPL-private/vpl/private/: mfxenctools.h
